--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,18 +1,22 @@
-.heading {
-  text-transform: uppercase;
-  text-align: center;
-  color: #bbbbbb;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
+
 a{
   text-decoration: none;
 }
 .nav__bar{
+  height: 100vh;
+  font-size: 2rem;
+  width: 100vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 1rem;
-  max-width: 1200px;
-  margin: auto;
+  min-height: 100vh;
+  min-width: 100vw;
+  background: #000814;
 }
 .nav{
   
