--- a/playground.css
+++ b/playground.css
@@ -9,7 +9,7 @@ body{
   justify-content:center;
   align-items:center;
   min-height:100vh;
-  background:#000;
+  background:#020a0e;
   
 }
 a{
@@ -37,7 +37,7 @@ nav a{
   display: inline-block;
   font-size:1.5rem;
   font-weight:500;
-  color:#fff;
+  color:#f0cb46;
   text-decoration:none;
   padding:0 23px;
   z-index:1;
@@ -49,7 +49,7 @@ nav span{
   left: -45px;
   width: 95px;
   height: 100%;
-  background: linear-gradient(45deg, #4f1919, #ff3333);
+  background: linear-gradient(45deg, #FF4191, #DD0A35);
   border-radius:8px;
   transition: .5s;
 }
